fix: removed lightbox scale animations, fixed scrollbar jump when opening lightbox and hamburger menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,9 @@ html, body {
 body {
     @apply antialiased bg-offwhite text-offblack dark:bg-offblack dark:text-offwhite;
 }
+html {
+    scrollbar-gutter: stable;
+}
 
 
 #__next,
